# Sem6

aod/lista1/src/main/kotlin/: Graph.kt
aod/lista1/src/resources/: README.txt
aod/lista1/src/resources/2/: g2a-1.txt  g2a-2.txt  g2a-3.txt  g2a-4.txt  (+4 more)
aod/lista2/: pom.xml
aod/lista3/: CMakeCache.txt  CMakeLists.txt  Makefile  binary_heap  binary_heap.cpp  cmake_install.cmake  dial  dial.cpp  pom.xml  radix  radix.cpp
aod/lista3/include/: algorithms.h  fileread.h  graph_utill.h
aod/lista3/src/: algorithms.cpp  fileread.cpp  graph_utill.cc
aod/lista3/src/main/java/: Application.java  Graph.java
aod/lista3/src/main/java/Algorithms/: Basic.java  Dial.java  Dijkstra.java  Radix.java
wsi/lista1/: FifteenInstanceComparator.cpp  FifteenInstanceComparator.h  FifteenSolver.cpp  FifteenSolver.h  fifteen.cpp  fifteen.hpp  fifteenInstance.cpp  fifteenInstance.h  heuristics.cpp  heuristics.h  main.cpp  main.py  my_module.cpp  my_module.py  p15data.csv  plots.py  puz15wd.db
wsi/lista1/puzzle15.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wsi/lista2/: game_bot  game_bot.c  game_client  game_server  game_server.c
wsi/lista3/: generate_model.ipynb  predict_own.ipynb  z3_relu_L1.py  z3_relu_L2.py  z3_relu_noL.py  z3_sigmoid_L1.py  z3_sigmoid_noL.py  z3_sigomid_L2.py
wsi/lista3/z3/: neural_network.py  relu_L1.py  relu_L2.py  relu_noL.py  sigmoid_L1.py  sigmoid_L2.py  sigmoid_noL.py
www/lista1/: home.css  home.html
www/lista3/wisielec/: index.html
www/lista3/wisielec/scripts/: index.js
www/lista3/wisielec/style/: theme.css  theme.css.map  theme.scss
(+36 files in other folders)
